# price-monitor

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  login_html.txt  products-page  pyproject.toml  set_password.py  test_dropdown.py
.claude/: settings.local.json
.claude/hooks/: rtk-auto-rewrite.ps1
.context/retros/: 2026-05-11-1.json
.github/workflows/: ci.yml
alembic/: AGENTS.md  env.py
alembic/versions/: 001_initial.py  002_add_alerts_index.py  004_add_cron_columns.py  ae69317e99ff_003_convert_datetime_to_timestamptz.py
app/: AGENTS.md  __init__.py  celery_app.py  config.py  database.py  main.py
backend/: check_sessions.py  detail_response.json  pyproject.toml  set_default_password.py  update_admin_role.py
doc/: DESIGN.md  backend-architecture.md  frontend-architecture.md  permission-architecture.md
docs/: 2026-05-14-admin-user-inline-resource-permission-plan.md  AI-Agent-Workflow.md  codex-rtk-windows-summary.md  mattpocock-skills-AI-Agent-Workflow.md  motion-implementation-plan.md  rtk-windows-auto-rewrite-hook.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
scripts/: debug_taobao_selectors.py  install-codex-rtk-wrapper.ps1  start_server.ps1  start_server.sh  test_jd_crawl.py
tests/: AGENTS.md  TEST_GUIDE.md  conftest.py  test_api.py  test_integration_realdb.py  test_jd_adapter.py  test_job_crawl.py  test_js_deep_scan_strategy.py  test_models.py  test_phase_c_integration.py
(+233 files in other folders)
